
Version 8.1.0 - DEV
-------------------
 - Document that minimum PHP version is now 7.4.0.
 - Add support for PHP 8.1.
 - Upgrade Symfony to 5.4 LTS and upgrade other library dependencies.
 - Replace calls to deprecated `strftime` with `date`. Note: if you have
   configured a custom `time_format`, you need to update it to the format
   supported by `date`.

Version 8.0.0 - 30 January 2022
-------------------------------
 - Compilation of submissions now happens inside the chroot.
   NOTE when upgrading: you need to install compilers and other
   dependencies for the compile phase inside the DOMjudge chroot.
   Also you need to remove the '--tmpdir' switch from the mktemp
   call in the java_javac_detect compile script (when using this).
 - Python 3 now uses pypy by default and is default enabled on new
   installations.
 - Improve performance with large amounts of affiliations.
 - Judging verifier is now also available to jury users.
 - Search for @EXPECTED_RESULTS@ marker in all submitted files
   to validate test submissions.
 - Allow users to specify their full name in self-registration.
 - Add metrics API endpoint for use with Prometheus.
 - Always show banner.png, if present, on the public scoreboard.
 - Upgrade bundled libraries.
 - Add problem statistics to team/public problem pages.
 - Add support for specifying database port.
 - Update API documentation to OpenAPI 3.
 - Add support for loading custom CSS and JavaScript.
 - Speed up loading team pictures and affiliation logos.
 - Add filter on result to jury submissions page.
 - Add API actions to create single team, team affiliation, team category and user.
 - Add problem attachment support.
 - Judge a single submission on multiple judgedaemons in parallel if the
   judging queue is empty.
 - Limit the size of the program output stored by default in the database;
   with a button in the UI to retrieve the full output.
 - Add new clarification handler role.